# redactcat

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.json
.claude/commands/: pr-review.md  research.md
.claude/skills/api-testing/: SKILL.md
.claude/skills/issue/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 1f3df75aa5fb_add_usage_events_table.py  70c605ebb21a_add_jobs_table.py  dbb33c782934_add_api_keys_table.py  dde6289a1274_initial_schema.py
app/: config.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/mcp/: install.sh  server.py
app/modules/: README.md  auth.py  health.py  users.py
app/routers/: README.md  auth.py  health.py  image.py  jobs.py  mcp.py  pdf.py  text.py  usage.py  users.py
app/services/: auth.py  barcodes.py  detection.py  extraction.py  image_redaction.py  redaction.py  rekognition.py  scheduler.py  storage.py  usage.py
infra/: .terraform.lock.hcl  app_runner.tf  architecture.drawio  dns.tf  ecr.tf  iam.tf  lambda.tf  main.tf  outputs.tf  s3.tf  ssm.tf  variables.tf
infra/lambda/: expire_jobs.py
tests/: conftest.py  test_auth.py  test_auth_router.py  test_barcodes_service.py  test_detection.py  test_detection_service.py  test_expire_lambda.py  test_health.py  test_image_router.py  test_jobs.py  test_mcp_router.py  test_migrations.py  test_pdf.py  test_pdf_router.py  test_redaction.py  test_redaction_service.py  test_rekognition.py  test_rekognition_service.py  test_scheduler_service.py  test_text.py  test_text_router.py  test_usage_router.py  test_usage_service.py  test_users.py  test_users_router.py
