[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redactcat"
version = "0.1.0"
description = "A FastAPI-based redaction service"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.0",
    "pyjwt>=2.0",
    "bcrypt>=5.0",
    "boto3>=1.35",
    "psycopg2-binary>=2.9.12",
    "alembic>=1.13",
    "pymupdf>=1.27.2.3",
    "pyzbar>=0.1.9",
]

[dependency-groups]
dev = [
    "httpx2>=2.4.0",
    "mypy>=2.1.0",
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
plugins = ["pydantic.mypy"]
python_version = "3.11"
files = ["app"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "infra/lambda"]
